generate main-layout, header and footer

--- a/apps/frontend/site/src/app/app.component.html
+++ b/apps/frontend/site/src/app/app.component.html
@@ -1,1 +1,7 @@
-<rwa-nx-welcome></rwa-nx-welcome> <router-outlet></router-outlet>
+<rwa-main>
+  <rwa-header header></rwa-header>
+  <div>
+    some content
+  </div>
+  <rwa-footer footer></rwa-footer>
+</rwa-main>
