add items for header

--- a/apps/frontend/site/src/app/app.component.html
+++ b/apps/frontend/site/src/app/app.component.html
@@ -1,5 +1,5 @@
 <rwa-main>
-  <rwa-header header></rwa-header>
+  <rwa-header header [items]="items"></rwa-header>
   <div>
     some content
   </div>
