--- a/libs/frontend/ui/src/lib/components/header/header.component.html
+++ b/libs/frontend/ui/src/lib/components/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+<ng-container *ngFor="let item of items">
+  <ng-container *ngIf="!item.children?.length">
+    <a [routerLink]="item.href">{{item.text}}</a>
+  </ng-container>
+  <ng-container *ngIf="item.children?.length">
+    <a>{{item.text}}</a>
+    <ng-container *ngFor="let child of item.children">
+      <a [routerLink]="child.href">{{child.text}}</a>
+    </ng-container>
+  </ng-container>
+</ng-container>
