add routing and add demo pages

--- a/apps/frontend/site/src/app/app.component.html
+++ b/apps/frontend/site/src/app/app.component.html
@@ -1,7 +1,5 @@
 <rwa-main>
   <rwa-header header [items]="items"></rwa-header>
-  <div>
-    some content
-  </div>
+  <router-outlet></router-outlet>
   <rwa-footer footer></rwa-footer>
 </rwa-main>
